--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" type="text/css">
     <link rel="stylesheet" href="style.css">
     <title>Lighthouse</title>
 </head>
@@ -25,7 +26,8 @@
             <li><a href="#about">About</a></li>
             <li><a href="#magazines">Magazines</a></li>
             <li><a href="#events">Events</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="#committe">Commitee</a></li>
+            <li><a href="#contactus">Contact Us</a></li>
         </ul>
     </nav>
     <header class="section_container header_container" id="home">
@@ -158,6 +160,85 @@
             </div>
         </div>
     </section>
+    <section class="team section_container" id="committe">
+        <div class="center">
+            <h1>Committe Members</h1>
+        </div>
+        <div class="team-content section_description">
+            <div class="box">
+                <img src="team.png" alt="teamMember">
+                <h3>Name Of Member</h3>
+                <h5>Role</h5>
+
+            </div>
+            <div class="box">
+                <img src="team.png" alt="teamMember">
+                <h3>Name Of Member</h3>
+                <h5>Role</h5>
+
+            </div>
+            <div class="box">
+                <img src="team.png" alt="teamMember">
+                <h3>Name Of Member</h3>
+                <h5>Role</h5>
+
+            </div>
+            <div class="box">
+                <img src="team.png" alt="teamMember">
+                <h3>Name Of Member</h3>
+                <h5>Role</h5>
+
+            </div>
+        </div>
+    </section>
+    <section class="contact" id="contactus">
+        <div class="container1">
+            <h2>Contact Us</h2>
+            <div class="contact-wrapper">
+                <div class="contact-form">
+                    <h3>Send us a message</h3>
+                    <form>
+                        <div class="form-group">
+                            <input type="text" name="name" placeholder="Your Name">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" name="name" placeholder="Your E-mail">
+                        </div>
+                        <div class="form-group">
+                            <textarea name="message" placeholder="Your Message Here"></textarea>
+                        </div>
+                        <button type="submit">Send Message</button>
+                    </form>
+                </div>
+                <div class="contact-info">
+                    <h3>Contact Information</h3>
+                    <p><i class="fas fa-phone"></i> +91 1234567890</p>
+                    <p><i class="fas fa-envelope"></i> something@example.com</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <footer class="footer" id="connect">
+        <div class=" footer_container section_container">
+            <div class="footer_col">
+                <div class="logo footer_logo">
+                    <a href="#">Light<span>House</span></a>
+                </div>
+                <div class="footer-content">
+                    <h4>Information</h4>
+                    <ul class="footer_links">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Commitee</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer_bar">
+                Copyright &copy; 2024 Lighthouse. All rights reserved.
+            </div>
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
