--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
                     <!-- Slides -->
                     <div class="swiper-slide">
                         <div class="client_card">
+                            <h1>2019</h1>
+                            <img src="mag.jpg" alt="magazineCover">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="client_card">
+                            <h1>2020</h1>
+                            <img src="mag.jpg" alt="magazineCover">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="client_card">
                             <h1>2021</h1>
                             <img src="mag.jpg" alt="magazineCover">
                         </div>
@@ -212,7 +224,8 @@
                 </div>
                 <div class="contact-info">
                     <h3>Contact Information</h3>
-                    <p><i class="fas fa-phone"></i> +91 1234567890</p>
+                    <p><i class="fas fa-phone"></i>
+                        <a href="tel:1234567890">+91 1234567890</a></p>
                     <p><i class="fas fa-envelope"></i> something@example.com</p>
                 </div>
             </div>
@@ -228,9 +241,9 @@
                 <div class="footer-content">
                     <h4>Information</h4>
                     <ul class="footer_links">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Commitee</a></li>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#contactus">Contact Us</a></li>
+                        <li><a href="#committe">Commitee</a></li>
                     </ul>
                 </div>
             </div>
@@ -239,7 +252,6 @@
             </div>
         </div>
     </footer>
-
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
