--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
     </section>
     <section class="section_container event_container" id="events">
         <h1 class="section_header">Our Events in a Timeline</h1>
-        <div class="timeline">
-            <div class="container left-container">
+        <div class="timeline reveal-timeline-after">
+            <div class="container left-container reveal-left">
                 <img src="color.png" alt="" class="blank">
                 <div class="textbox">
                     <h2>dd/mm/yyyy</h2>
@@ -125,7 +125,7 @@
                     <span class="left-container-arrow"></span>
                 </div>
             </div>
-            <div class="container right-container">
+            <div class="container right-container reveal-right">
                 <img src="color.png" alt="" class="blank">
                 <div class="textbox">
                     <h2>dd/mm/yyyy</h2>
@@ -137,7 +137,7 @@
 
                 </div>
             </div>
-            <div class="container left-container">
+            <div class="container left-container reveal-left">
                 <img src="color.png" alt="" class="blank">
                 <div class="textbox">
                     <h2>dd/mm/yyyy</h2>
@@ -148,7 +148,7 @@
                     <span class="left-container-arrow"></span>
                 </div>
             </div>
-            <div class="container right-container">
+            <div class="container right-container reveal-right">
                 <img src="color.png" alt="" class="blank">
                 <div class="textbox">
                     <h2>dd/mm/yyyy</h2>
@@ -159,7 +159,7 @@
                     <span class="right-container-arrow"></span>
                 </div>
             </div>
-            <div class="container left-container">
+            <div class="container left-container reveal-left">
                 <img src="color.png" alt="" class="blank">
                 <div class="textbox">
                     <h2>dd/mm/yyyy</h2>
@@ -226,7 +226,7 @@
                     <h3>Contact Information</h3>
                     <p><i class="fas fa-phone"></i>
                         <a href="tel:1234567890">+91 1234567890</a></p>
-                    <p><i class="fas fa-envelope"></i> something@example.com</p>
+                    <p><i class="fas fa-envelope"></i> <a href="mailto:something@example.com">something@example.com</a></p>
                 </div>
             </div>
         </div>
