--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" type="text/css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!--Swiper css-->
+    <!-- <link rel="stylesheet" href="swiper-bundle.min.css"> -->
     <link rel="stylesheet" href="style.css">
     <title>Lighthouse</title>
 </head>
@@ -60,7 +63,7 @@
         <h1 class="section_header">Magazines Over the years...</h1>
         <div class="magazine_swiper">
             <!-- Slider main container -->
-            <div class="swiper">
+            <div class="swiper1">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                     <!-- Slides -->
@@ -172,6 +175,83 @@
             </div>
         </div>
     </section>
+    <section class="spotlight section_container" id="spot">
+        <div class="center">
+            <h1>Spotlight</h1>
+        </div>
+        <div class="super-container">
+            <div class="slide-container swiper2">
+                <div class="slide-content swiper-wrapper">
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+                            <div class="card-image">
+                                <img src="LIGHTHOUSE.png" alt="" class="card-img">
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="event-name">
+                                Spotlight 1
+                            </h2>
+                            <p class="description">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, hic illum? Quaerat similique recusandae magni dolorem possimus totam iste. Quo sequi iusto ab magni odit voluptatum officiis laboriosam, sapiente dicta.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+                            <div class="card-image">
+                                <img src="LIGHTHOUSE.png" alt="" class="card-img">
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="event-name">
+                                Spotlight 2
+                            </h2>
+                            <p class="description">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, hic illum? Quaerat similique recusandae magni dolorem possimus totam iste. Quo sequi iusto ab magni odit voluptatum officiis laboriosam, sapiente dicta.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+                            <div class="card-image">
+                                <img src="LIGHTHOUSE.png" alt="" class="card-img">
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="event-name">
+                                Spotlight 3
+                            </h2>
+                            <p class="description">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, hic illum? Quaerat similique recusandae magni dolorem possimus totam iste. Quo sequi iusto ab magni odit voluptatum officiis laboriosam, sapiente dicta.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+                            <div class="card-image">
+                                <img src="LIGHTHOUSE.png" alt="" class="card-img">
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="event-name">
+                                Spotlight 4
+                            </h2>
+                            <p class="description">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, hic illum? Quaerat similique recusandae magni dolorem possimus totam iste. Quo sequi iusto ab magni odit voluptatum officiis laboriosam, sapiente dicta.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="swiper-pagination2"></div>
+            </div>
+        </div>
+    </section>
     <section class="team section_container" id="committe">
         <div class="center">
             <h1>Committe Members</h1>
@@ -254,6 +334,7 @@
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <!-- <script src="swiper-bundle.min.js"></script> -->
     <script src="script.js"></script>
 </body>
 
