--- a/index.html
+++ b/index.html
@@ -196,6 +196,18 @@
                             <p class="description">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, hic illum? Quaerat similique recusandae magni dolorem possimus totam iste. Quo sequi iusto ab magni odit voluptatum officiis laboriosam, sapiente dicta.
                             </p>
+                            <div class="btns">
+                                <div class="new-btn prev-elem">
+                                    <i class="fa-solid fa-arrow-left"></i>
+                                    <h3>Previous Event
+                                    </h3>
+                                </div>
+                                <div class="new-btn next-elem">
+                                    <h3>Next Event
+                                    </h3>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -212,6 +224,18 @@
                             <p class="description">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, hic illum? Quaerat similique recusandae magni dolorem possimus totam iste. Quo sequi iusto ab magni odit voluptatum officiis laboriosam, sapiente dicta.
                             </p>
+                            <div class="btns">
+                                <div class="new-btn prev-elem">
+                                    <i class="fa-solid fa-arrow-left"></i>
+                                    <h3>Previous Event
+                                    </h3>
+                                </div>
+                                <div class="new-btn next-elem">
+                                    <h3>Next Event
+                                    </h3>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -228,6 +252,18 @@
                             <p class="description">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, hic illum? Quaerat similique recusandae magni dolorem possimus totam iste. Quo sequi iusto ab magni odit voluptatum officiis laboriosam, sapiente dicta.
                             </p>
+                            <div class="btns">
+                                <div class="new-btn prev-elem">
+                                    <i class="fa-solid fa-arrow-left"></i>
+                                    <h3>Previous Event
+                                    </h3>
+                                </div>
+                                <div class="new-btn next-elem">
+                                    <h3>Next Event
+                                    </h3>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -244,6 +280,18 @@
                             <p class="description">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, hic illum? Quaerat similique recusandae magni dolorem possimus totam iste. Quo sequi iusto ab magni odit voluptatum officiis laboriosam, sapiente dicta.
                             </p>
+                            <div class="btns">
+                                <div class="new-btn prev-elem">
+                                    <i class="fa-solid fa-arrow-left"></i>
+                                    <h3>Previous Event
+                                    </h3>
+                                </div>
+                                <div class="new-btn next-elem">
+                                    <h3>Next Event
+                                    </h3>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
