--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
             <img src="hero.jpg" alt="heroSectionImg">
         </div>
         <div class="header_content">
-            <h1>Our Latest <span>Event</span></h1>
-            <p class="section_description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi quia nostrum libero fuga voluptas. Ipsam quod, iusto deserunt magni alias dignissimos magnam doloribus nulla corporis, rem dolores asperiores. Cum, fugit. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Non, harum id sunt quia unde obcaecati voluptate consequatur nostrum eveniet sint facilis suscipit voluptas, et nihil laborum ipsam. Aperiam, sed voluptas!
-            </p>
+            <h1>Our Latest <span>Event: </span>
+                <br>Magazine Reveal
+            </h1>
+
+            <h3 class="section_description">
+                Date: 15/August/2024
+                <br> Venue: College Ground
+                <br>Chief Guest: Mr. Vivek Deshpande
+
+            </h3>
         </div>
 
     </header>
@@ -54,8 +59,14 @@
         <div class="about_content">
             <h1 class="section_description">About <span>Lighthouse</span></h1>
             <p class="section_description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum voluptatibus tenetur nobis illo. Saepe, consequuntur at architecto modi veritatis excepturi sequi. Labore doloribus eligendi esse voluptas corporis, voluptate in? Adipisci. Lorem ipsum dolor
-                sit amet consectetur adipisicing elit. Incidunt nam id temporibus minus excepturi corrupti neque, aliquid voluptates reiciendis et magnam voluptatum itaque quos eius eveniet omnis repudiandae provident ea!
+                What comes to your mind when you hear Lighthouse?
+                <br> A lost ship, battling the furious waves of the sea, with people running all over the boat frantically, in a dark, dark night?
+                <br> Or a concrete, red and white striped old tower, with a bright yellow light shining at the top, trying to guide lost ships to shore?
+                <br> We see a team of incredibly creative people with a zeal to publish a wholesome college magazine! That's who we are!
+                <br>The name Lighthouse is a testament to our explorative journey to find the best and most ingenious artforms, because we believe that it not only guides one from darkness to the transcendental enlightenment, but also helps to re-discover
+                our truest passions in the process.
+                <br> We at Lighthouse strive to make a small attempt from our side to collect these torches to create enough light to view the ornateness of life, which can be tough sometimes and one may feel lost in the endless pursuits of it.
+
             </p>
         </div>
     </section>
@@ -67,7 +78,7 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div class="swiper-slide">
+                    <!-- <div class="swiper-slide">
                         <div class="client_card">
                             <h1>2019</h1>
                             <img src="mag.jpg" alt="magazineCover">
@@ -78,24 +89,30 @@
                             <h1>2020</h1>
                             <img src="mag.jpg" alt="magazineCover">
                         </div>
+                    </div> -->
+                    <div class="swiper-slide">
+                        <a href="https://online.fliphtml5.com/gfwlu/nyzi/#p=1" target="blank">
+                            <div class="client_card">
+                                <h1>2021</h1>
+                                <img src="mag.jpg" alt="magazineCover">
+                            </div>
+                        </a>
                     </div>
                     <div class="swiper-slide">
-                        <div class="client_card">
-                            <h1>2021</h1>
-                            <img src="mag.jpg" alt="magazineCover">
-                        </div>
+                        <a href="https://online.fliphtml5.com/wlieb/rbuv/#google_vignette " target="blank">
+                            <div class="client_card">
+                                <h1>2022</h1>
+                                <img src="mag.jpg" alt="magazineCover">
+                            </div>
+                        </a>
                     </div>
                     <div class="swiper-slide">
-                        <div class="client_card">
-                            <h1>2022</h1>
-                            <img src="mag.jpg" alt="magazineCover">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="client_card">
-                            <h1>2023</h1>
-                            <img src="mag.jpg" alt="magazineCover">
-                        </div>
+                        <a href=" https://heyzine.com/flip-book/a2d774ea2a.html#page/1" target="blank">
+                            <div class="client_card">
+                                <h1>2023</h1>
+                                <img src="mag.jpg" alt="magazineCover">
+                            </div>
+                        </a>
                     </div>
                     <div class="swiper-slide">
                         <div class="client_card">
@@ -120,22 +137,32 @@
             <div class="container left-container reveal-left">
                 <img src="color.png" alt="" class="blank">
                 <div class="textbox">
-                    <h2>dd/mm/yyyy</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptatem labore distinctio ipsa accusantium eos nobis voluptatibus nostrum aut corporis magni architecto earum dolorem laboriosam fugiat temporibus ducimus corrupti
-                        cumque?
+                    <h2>Jashn-e- Sadaa 2.0</h2>
+                    <h3>22 April 2024 (12:00 PM to 6:00 PM) </h3>
+                    <h3>Seminar Hall, E Building, VIIT Campus</h3>
+                    <p>After the grand success of Jashn-e-Sadaa last year, Lighthouse VIIT in collaboration with the Rotaract Club of VIIT, organized Jashn-e-Sadaa 2.0. It had two major goals this year. One, just as a Lighthouse guides ships in the stormy
+                        oceans and seas, we wanted to provide the students a platform, an opportunity to express the storms brewing in them, in the form of various artforms and represent themselves in the most beautiful and raw manner possible. The second
+                        being, Jashn-e-Sadaa, literally meaning the Celebration of Voice, celebrated and rejoiced the voice of the students through their poetry, the amazing performances depicted on the stage and more. The theme of this year for the event
+                        was, ‘#firse_kalam_se_zubaan_tak’. The special factor was VIIT’s own music band, one of its kind, the D-Chord.
+
                     </p>
-                    <img src="events.png" alt="">
+                    <img src="Jashn-e-Sadaa 2.0 Insta.png" alt="">
                     <span class="left-container-arrow"></span>
                 </div>
             </div>
             <div class="container right-container reveal-right">
                 <img src="color.png" alt="" class="blank">
                 <div class="textbox">
-                    <h2>dd/mm/yyyy</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptatem labore distinctio ipsa accusantium eos nobis voluptatibus nostrum aut corporis magni architecto earum dolorem laboriosam fugiat temporibus ducimus corrupti
-                        cumque?
+                    <h2>Kalaasagar</h2>
+                    <h3>3rd November 2023 (3:30 PM to 5:45 PM)</h3>
+                    <h3>101, D Building, VIIT Campus</h3>
+                    <p>Kalaasagar was an Open-Mic event held by Lighthouse VIIT, a joint orientation/interactive event where participants and attendees were not only given information and an introduction about the club, but also a platform to express their
+                        creative side and their arts. The event ranged from many categories like poetry to stand-ups to live music and the response for the entire event was greatly positive and entertaining. The event was graced by the presence of Lighthouse’s
+                        faculty coordinator, Prof. Vivek Nagnath sir, and the Dean of Student Affairs, Dr. Radhika Purandare ma’am. They ignited the lamp and offered their reverence to the idol of Maa Saraswati, the Goddess of Knowledge, marking the inauguration
+                        of the event. They also addressed the crowd with a few words of encouragement, after which the performances began.
+
                     </p>
-                    <img src="events.png" alt="">
+                    <img src="IMG_6932.jpg" alt="">
                     <span class="right-container-arrow"></span>
 
                 </div>
@@ -143,33 +170,14 @@
             <div class="container left-container reveal-left">
                 <img src="color.png" alt="" class="blank">
                 <div class="textbox">
-                    <h2>dd/mm/yyyy</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptatem labore distinctio ipsa accusantium eos nobis voluptatibus nostrum aut corporis magni architecto earum dolorem laboriosam fugiat temporibus ducimus corrupti
-                        cumque?
+                    <h2>Jashn-e-Sadaa</h2>
+                    <h3>2nd December 2022 (3:15 PM to 6:45 PM)</h3>
+                    <h3>Seminar Hall, E Building, VIIT Campus</h3>
+                    <p>Jashn-e-Sadaa was an inquisitive open-mic collaborative event conducted by VIIT’s Poetry Club and Lighthouse, held on the backgrounds of hearing everybody's voice. Jashn means celebration and Sadaa meaning voice, blends up to mean
+                        a celebration of voices. It was a power packed event which was home to poetry, singing, rapping, instrumentals, stand-up comedy and much more to count for. The tagline of this event was ‘#Kalam_Se_Zubaan_Tak’, a testimony to portray
+                        a podium where every creation of would be appreciated and listened with no judgements.
                     </p>
-                    <img src="events.png" alt="">
-                    <span class="left-container-arrow"></span>
-                </div>
-            </div>
-            <div class="container right-container reveal-right">
-                <img src="color.png" alt="" class="blank">
-                <div class="textbox">
-                    <h2>dd/mm/yyyy</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptatem labore distinctio ipsa accusantium eos nobis voluptatibus nostrum aut corporis magni architecto earum dolorem laboriosam fugiat temporibus ducimus corrupti
-                        cumque?
-                    </p>
-                    <img src="events.png" alt="">
-                    <span class="right-container-arrow"></span>
-                </div>
-            </div>
-            <div class="container left-container reveal-left">
-                <img src="color.png" alt="" class="blank">
-                <div class="textbox">
-                    <h2>dd/mm/yyyy</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptatem labore distinctio ipsa accusantium eos nobis voluptatibus nostrum aut corporis magni architecto earum dolorem laboriosam fugiat temporibus ducimus corrupti
-                        cumque?
-                    </p>
-                    <img src="events.png" alt="">
+                    <img src="Collab Reveal Poster.png" alt="">
                     <span class="left-container-arrow"></span>
                 </div>
             </div>
@@ -306,27 +314,137 @@
         </div>
         <div class="team-content section_description">
             <div class="box">
-                <img src="team.png" alt="teamMember">
-                <h3>Name Of Member</h3>
-                <h5>Role</h5>
+                <img src="Shashank S J.jpg" alt="teamMember">
+                <h3>Shashank S Japatti</h3>
+                <h4>Mechanical (TY)</h4>
+                <h5>President</h5>
+
+            </div>
+            <div class="box">
+                <img src="Suraj Aher, vp.jpg" alt="teamMember">
+                <h3>Suraj Aher</h3>
+                <h4>IT (TY)</h4>
+                <h5>Vice-President</h5>
 
             </div>
             <div class="box">
                 <img src="team.png" alt="teamMember">
-                <h3>Name Of Member</h3>
-                <h5>Role</h5>
+                <h3>Pragati Dhage</h3>
+                <h4>IT (TY)</h4>
+                <h5>Design Head</h5>
+
+            </div>
+            <div class="box">
+                <img src="Vaibhav Khinvasara.jpg" alt="teamMember">
+                <h3>Vaibhav Khinvasara</h3>
+                <h4>IT (TY)</h4>
+                <h5>Chief Editor</h5>
+
+            </div>
+        </div>
+        <div class="team-content section_description">
+            <div class="box">
+                <img src="Swapnali Kulkarni.jpg" alt="teamMember">
+                <h3>Swapnali Kulkarni</h3>
+                <h4>CS (SY)</h4>
+                <h5>Designer</h5>
+
+            </div>
+            <div class="box">
+                <img src="Rayyan (editor).jpg" alt="teamMember">
+                <h3>Rayyan Burondkar</h3>
+                <h4>CS (SY)</h4>
+                <h5>Editor</h5>
+
+            </div>
+            <div class="box">
+                <img src="Vinayak(ed-eater).jpg" alt="teamMember">
+                <h3>Vinayak Kanhegaonkar</h3>
+                <h4>IT (SY)</h4>
+                <h5>Editor</h5>
+
+            </div>
+            <div class="box">
+                <img src="Pratiksha Naik (Editor).jpg" alt="teamMember">
+                <h3>Pratiksha Naik</h3>
+                <h4>CS (SY)</h4>
+                <h5>Editor</h5>
+
+            </div>
+        </div>
+        <div class="team-content section_description">
+            <div class="box">
+                <img src="Chetan Dalal.jpg" alt="teamMember">
+                <h3>Chetan Dalal</h3>
+                <h4>E&TC (SY)</h4>
+                <h5>CMA</h5>
 
             </div>
             <div class="box">
                 <img src="team.png" alt="teamMember">
-                <h3>Name Of Member</h3>
-                <h5>Role</h5>
+                <h3>Sakshi Subhash Kudale</h3>
+                <h4>CIVIL (SY)</h4>
+                <h5>CMA</h5>
+
+            </div>
+            <div class="box sam">
+                <img src="samarth bhalerao.jpg" alt="teamMember">
+                <h3>Samarth Bhalerao</h3>
+                <h4>E&TC (SY)</h4>
+                <h5>Technical</h5>
 
             </div>
             <div class="box">
-                <img src="team.png" alt="teamMember">
-                <h3>Name Of Member</h3>
-                <h5>Role</h5>
+                <img src="Abhijeet shinde ( technical head)_.jpg" alt="teamMember">
+                <h3>Abhijeet Shinde</h3>
+                <h4>CS (SY)</h4>
+                <h5>Technical</h5>
+
+            </div>
+        </div>
+        <div class="team-content section_description">
+            <div class="box">
+                <img src="Chaitanya Pawar.jpg" alt="teamMember">
+                <h3>Chaitanya Pawar</h3>
+                <h4>CIVIL (TY)</h4>
+                <h5>Dept. Head</h5>
+
+            </div>
+            <div class="box">
+                <img src="Venkatesh Kulkarni.jpg" alt="teamMember">
+                <h3>Venkatesh Kulkarni</h3>
+                <h4>Mechanical (TY)</h4>
+                <h5>Dept. Head</h5>
+
+            </div>
+            <div class="box">
+                <img src="Jeet Raut.jpg" alt="teamMember">
+                <h3>Jeet Raut</h3>
+                <h4>AI&DS (SY)</h4>
+                <h5>Dept. Head</h5>
+
+            </div>
+            <div class="box">
+                <img src="Shruti Dhapare.jpg" alt="teamMember">
+                <h3>Shruti Dhapare</h3>
+                <h4>CS (TY)</h4>
+                <h5>Dept. Head</h5>
+
+            </div>
+        </div>
+        <div class="team-content section_description teamCont">
+            <div class="box">
+                <img src="Ganesh shinde.jpg" alt="teamMember">
+                <h3>Ganesh Shinde</h3>
+                <h4>E&TC (SY)</h4>
+                <h5>Dept. Head</h5>
+
+            </div>
+            <div class="box">
+                <img src="Mayuresh Chavan.jpg" alt="teamMember">
+                <h3>Mayuresh Chavan</h3>
+                <h4>IT (TY)</h4>
+                <h5>Dept. Head</h5>
 
             </div>
         </div>
